[FIX] Black on black contrast fixed (table class="default" -- is there a reason why this special class is needed?).
git-svn-id: https://svn.code.sf.net/p/tikiwiki/code/branches/2.0@15815 b456876b-0849-0410-b77d-98878d47e9d5

--- a/styles/thenews.css
+++ b/styles/thenews.css
@@ -2186,13 +2186,13 @@ div#ajaxLoading {
 table.default thead td,	table.default tfoot td {
 	font-weight: bold;
 	text-align:	center;
-	background-color: black;
-	color: #D8D8D8;
+	background: #fff;
+	color: #000;
 }
 
 table.default	td {
-	border : solid 1px #A9A9A9;
-	background-color: black;
+	border: solid 1px #A9A9A9;
+	background: #fff;
 }
 
 /**********   'advanced feature' divs   **********/
